Fix vertical alignment of menu in mobile view

--- a/app/assets/stylesheets/vendor_overrides.scss
+++ b/app/assets/stylesheets/vendor_overrides.scss
@@ -325,7 +325,7 @@ aside {
 
     .nav-signup {
       display: block;
-      margin-top: 7.92em;
+      margin-top: 10.56em;
       .bg {
         margin: 0 0 1px;
         padding: 0.8em;
